# monogram-go

./: .gitignore  .gitignore.top  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG.md  Dockerfile  Justfile  Justfile.top  README.md  avl.py  example-config.yaml  example.mg  functest.py  go.mod  go.sum  install.sh  jumpstart.sh  monogram-mini  monogram.p  original.py  prompt.md  runtests.py  tests.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
docs/: arithmetic.md  balanced_ternary.md  config.md  cosine_addition.md  cstyle_if.md  dot.md  examples.md  factorial.md  get_started.md  get_started_cli.md  get_started_go_mod.md  grammar.html  json.md  json_blob.md  let.md  mermaid.md  nonfinite_literals.md  test_option.md  token_rules.html  tokens.md  yaml.md
ex/: 02.mg  03.mg  04.mg  05.mg  07.mg  08.mg  11.mg  ex03.mg  ex06.mg
examples/: Justfile  arithmetic.md  cosine_addition.md  cosine_addition.mg  factorial.md  json_blob.md  make_page.py  xml_to_json.py  xml_to_mermaid.py
functests/: asciitree-tests.yaml  config-tests.yaml  functest.py  general-xml-tests.yaml  json-tests.yaml  prec-xml-tests.yaml  pyproject.toml  string-xml-tests.yaml  tests.yaml  xml-tests.yaml  xml-xml-tests.yaml  yaml-tests.yaml
functests/config-test-files/: basic.yaml
golang/: ast.go  dot_writer.go  go.mod  monogram.go  (+7 more)
make_railroad_diagram/: Justfile  mg_grammar_tabatkins.txt  mg_token_rules.txt  pyproject.toml  tabatkins2html.py
xml_to_dot/: Justfile  factorial.json  factorial.mermaid  factorial.xml  factorial.yaml  pyproject.toml  xml_to_mermaid.py  xml_to_yaml.py
(+147 files in other folders)
