[tool.poetry]
name = "make-railroad-diagram"
version = "0.1.0"
description = ""
authors = ["Stephen Leach <sfkleach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
railroad-diagrams = "^3.0.1"
pymustache = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
